--- a/pages/about.html
+++ b/pages/about.html
@@ -6,9 +6,11 @@
 		<link rel="stylesheet" href="../css/normalize.css">
 		<link rel="stylesheet" href="../css/foundation.css">
 		<link rel="stylesheet" href="../css/style.css">
+		<link rel="stylesheet" href="../css/iconfont.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,600' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Montserrat:400' rel='stylesheet' type='text/css'>
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 		<title>Nicole Calace</title>
 	</head>
 
@@ -19,83 +21,35 @@
 		</div>
 		<div class="header" id="links">
 			<ul class="navbar">
-				<li> <div class="unselectedpage"> <a href="index.html">ux design</a> </div> </li>
+				<li> <div class="unselectedpage"> <a href="index.html">product design</a> </div> </li>
 				<li> <div class="unselectedpage"> <a href="graphicdesign.html">graphic design</a> </div> </li>
 				<li> <div class="selectedpage"> <a href="about.html">about</a> </div> </li>
 			</ul>
 			<div style="clear:both;"></div>		
 		</div>
 
-		<div class="maincontent about">
+	<div class="maincontent about">
 
 		<div class="row">
-			<div class="small-12 large-9 columns moreinfo">
-				<h1>Hi, I'm Nicole Calace.</h1>
-				<p>I'm an interaction designer, but I have experience working as as visual designer and rapid prototyper as well.</p>
-				<p> <a href="http://behance.net/nicolecalace">Behance</a> <a href="http://www.linkedin.com/profile/view?id=240373679">LinkedIn</a> <a href="mailto:nec45@cornell.edu">Email</a>
-				<p> <a href="#">Download Resume (PDF)</a> </p>
-			</div>
-			<div class="small-12 large-3 columns centered">
-				<img src="../img/circle.png">
+			<div class="small-12 large-12 columns moreinfo">
+				<h2>Hi, I'm Nicole Calace.</h2>
+				<p>I’m a sophomore at Cornell University, studying Information Science, with a focus on human centered systems. Primarily I consider myself an interaction designer, but I have experience working as a visual designer and rapid prototyper as well. I want simplify the boundary between people and their devices, and put the user back in user-centered design. </p>
+				
 			</div>
 		</div>
 
 		<p></p>
 
 		<div class="row">
-			<div class="large-12 columns moreinfo">
-				<h2>Education</h2>
-				<p><b>Cornell University</b></br>Bachelor's degree, <a href="http://www.infosci.cornell.edu">Information Science</a> with a concentration in Human Centered Systems</br>Class of 2016</p>
-				<p><b>Bronx High School of Science</b></br>National ARISTA Honors Society Inductee.</br>Class of 2016</p>
-			 	
-			</div>
-		</div>
-
-		<p></p>
-
-		<div class="row">
-			<div class="large-12 columns moreinfo">
-				<h2>Past Work Experience</h2>
-				<ul>
-					<p><b>User Experience Design Intern</b><br/><a href="http://lab126.com">Amazon Lab126</a><br/>Worked on interaction and visual design of a future product idea with a small team of designers. Designed a new feature for the product as a self-governed intern project.</p>
-			      	<p><b>Job Shadowing</b><br/><a href="http://www.adobe.com/">Adobe Systems</a> - <a href="http://brackets.io">Brackets</a><br/>Job shadowed a software engineer working on Brackets, observed meetings, and spoke with software engineers, product managers, and user experience designers.</p>
-			      	<p><b>User Experience Designer</b><br/><a href="http://rosieapp.com">RosieApp</a><br/>Worked on the interaction and visual design of the mobile and web app. Completed the company branding.</p>
-			      	<p><b>IT Intern</b><br/><a href="http://foursquare.com">Foursquare</a><br/>Fixed computers, organized inventory and helped employees use company technology.</p>
-				</ul>
-			</div>
-		</div>
-
-		<p></p>
-
-		<div class="row">
-			<div class="large-12 columns moreinfo">
-				<h2>Research</h2>
-				<ul>
-					<p><b>UX Researcher</b><br/><a href="idl.cornell.edu">Interaction Design Lab</a> </p>
-				 	<p><b>UX Design Lead, UX Researcher</b><br/>Achieve </p>
-				 </ul>
-			</div>
-		</div>
-
-		<p></p>
-
-		<div class="row">
-			<div class="large-12 columns moreinfo">
-				<h2>Extracurriculars</h2>
-				<p><b>President</b> - <a href="http://www.cornelluxdesign.com"> Cornell UX Design Club </a> </p>
-			    <p><b>Manager</b> - <a href="http://www.popright.in">POPSHOP</a>, student-run entrepreneurial co-working space</p>
-			    <p><b>Undergraduate Mentor</b> - <a href="https://www.facebook.com/CornellWomenInComputing">Women In Computing at Cornell</a></p>
-			</div>
-		</div>
-
-		<p></p>
-
-		<div class="row">
-			<div class="large-12 columns moreinfo">
-				<h2>Technical Skills</h2>
-				<p>Experienced with Adobe Photoshop, Adobe Illustrator, Adobe InDesign, HTML5, CSS3
-				<p>Familiar with Python, PHP, Jquery</p>
-				<p>Learning Javascript and Quartz Composer</p>
+			<div class="large-12 small-7 columns large-centered small-centered moreinfo">
+				<p>
+					<div class="button"><a href="nicolecalace_resume.pdf">resume (PDF)</a> </div>
+					<div class="button"><a href="mailto:nec45@cornell.edu">email</a> </div>
+					<div class="button"><a href="http://www.linkedin.com/profile/view?id=240373679">LinkedIn</a></div>
+					<div class="button"><a href="https://github.com/thiswouldbenicole">GitHub</a></div>
+					<div class="button"><a href="https://behance.net/nicolecalace">Behance</a></div>
+					<div class="button"><a href="http://twitter.com/therealactual">Twitter</a></div>
+				</p>
 			</div>
 		</div>
 
@@ -105,7 +59,23 @@
 		<div class="returnbutton">
 			<p><a href="index.html">return to portfolio</a></p>
 		</div>
-
 	</div>
+
+	<script>
+		$(function(){ // document ready
+		  var stickyTop = $('#links').offset().top; // returns number 
+		  $(window).scroll(function(){ // scroll event  
+		    var windowTop = $(window).scrollTop(); // returns number
+		    if (stickyTop < windowTop) {
+		      $('#links').css({ position: 'fixed', top: 0 });
+		      $('.maincontent').css({ marginTop: '5em'});
+		    }
+		    else {
+		      $('#links').css('position','static');
+		      $('.maincontent').css({ marginTop: '1.5em'});
+		    }
+		  });
+		});
+	</script>
 	</body>
 </html>
