--- a/pages/graphicdesign.html
+++ b/pages/graphicdesign.html
@@ -9,7 +9,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,600' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Montserrat:400' rel='stylesheet' type='text/css'>
-
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 		<script src="../js/lightbox-2.6.min.js"></script>
 		<link href="../css/lightbox.css" rel="stylesheet" />
@@ -25,7 +24,7 @@
 		</div>
 		<div class="header" id="links">
 			<ul class="navbar">
-				<li> <div class="unselectedpage"> <a href="index.html">ux design</a> </div> </li>
+				<li> <div class="unselectedpage"> <a href="index.html">product design</a> </div> </li>
 				<li> <div class="selectedpage"> <a href="graphicdesign.html">graphic design</a> </div>
 				<li> <div class="unselectedpage"> <a href="about.html">about</a> </div> </li>
 			</ul>
@@ -36,9 +35,9 @@
 			<div class="row">
 				<div class="large-12 columns moreinfo">
 
-					<h2>Illustrations</h2>
-					<p class="bottommargin">Assorted Illustrations</p>
-					<div class="grid small-block-grid-1 medium-block-grid-2 large-block-grid-4">
+					<h2>Assorted Illustrations</h2>
+					<p class="bottommargin"> </p>
+					<div class="grid small-block-grid-2 medium-block-grid-2 large-block-grid-4">
 						<li><a href="../img/graphic-design/flat-illustration/flat-ios7-icons.png" data-lightbox="flatillustration"><img src="../img/graphic-design/thumbnails/flat_icon_cover.png"></a></li>
 						<li><a href="../img/graphic-design/flat-illustration/flat-canon-ae-1.png" data-lightbox="flatillustration"><img src="../img/graphic-design/thumbnails/flat_camera_cover.png"></a></li>
 						<li><a href="../img/graphic-design/flat-illustration/deer-child.png" data-lightbox="flatillustration"><img src="../img/graphic-design/thumbnails/deer_child_cover.png"></a></li>
@@ -47,7 +46,7 @@
 
 					<h2>"About Me" Icons</h2>
 					<p class="bottommargin">A set of icons made originally for an "About Me" page</p>
-					<div class="grid small-block-grid-1 medium-block-grid-2 large-block-grid-3">
+					<div class="grid small-block-grid-2 medium-block-grid-2 large-block-grid-3">
 						<li><a href="../img/graphic-design/about-icons/about-icons-03.png" data-lightbox="abouticons"><img src="../img/graphic-design/thumbnails/about-icons-03th.png"></a></li>
 						<li><a href="../img/graphic-design/about-icons/about-icons-04.png" data-lightbox="abouticons"><img src="../img/graphic-design/thumbnails/about-icons-04th.png"></a></li>
 						<li><a href="../img/graphic-design/about-icons/about-icons-14.png" data-lightbox="abouticons"><img src="../img/graphic-design/thumbnails/about-icons-14th.png"></a></li>			
@@ -55,7 +54,7 @@
 
 					<h2>Device Frames</h2>
 					<p class="bottommargin">A series of device frames made to put around wireframes to give them more context</p>
-					<div class="grid small-block-grid-1 medium-block-grid-2 large-block-grid-4">
+					<div class="grid small-block-grid-2 medium-block-grid-2 large-block-grid-4">
 						<li><a href="../img/graphic-design/flat-frames/flat-white-iphone.png" data-lightbox="deviceframes"><img src="../img/graphic-design/thumbnails/flat-white-iphone-th.png"></a></li>
 						<li><a href="../img/graphic-design/flat-frames/flat-black-iphone.png" data-lightbox="deviceframes"><img src="../img/graphic-design/thumbnails/flat-black-iphone-th.png"></a></li>
 						<li><a href="../img/graphic-design/flat-frames/flat-htcone.png" data-lightbox="deviceframes"><img src="../img/graphic-design/thumbnails/flat-htcone-th.png"></a></li>
@@ -71,6 +70,23 @@
 				</div>
 			</div>
 		</div>
+
+		<script>
+			$(function(){ // document ready
+			  var stickyTop = $('#links').offset().top; // returns number 
+			  $(window).scroll(function(){ // scroll event  
+			    var windowTop = $(window).scrollTop(); // returns number
+			    if (stickyTop < windowTop) {
+			      $('#links').css({ position: 'fixed', top: 0 });
+			      $('.maincontent').css({ marginTop: '5em'});
+			    }
+			    else {
+			      $('#links').css('position','static');
+			      $('.maincontent').css({ marginTop: '1.5em'});
+			    }
+			  });
+			});
+		</script>
 
 	</body>
 </html>
