--- a/pages/rosieapp.html
+++ b/pages/rosieapp.html
@@ -9,6 +9,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,600' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Montserrat:400' rel='stylesheet' type='text/css'>
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 		<title>Nicole Calace</title>
 	</head>
 
@@ -23,7 +24,7 @@
 
 		<div class="header" id="links">
 			<ul class="navbar">
-				<li> <div class="selectedpage"> <a href="index.html">ux design</a> </div> </li>
+				<li> <div class="selectedpage"> <a href="index.html">product design</a> </div> </li>
 				<li> <div class="unselectedpage"> <a href="graphicdesign.html">graphic design</a> </div> </li>
 				<li> <div class="unselectedpage"> <a href="about.html">about</a> </div> </li>
 			</ul>
@@ -34,14 +35,14 @@
 			<h1>RosieApp</h1>
 			<h2>UX Designer</h2>
 			<h3>October 2012 - January 2013</h3>
-			<p><a href="https://www.rosieapp.com/">RosieApp</a> is a Cornell based startup creating platform that allows users to shop online for groceries at local stores, and will eventually act as a predictive shopping platform that will order things for you before running out.</p>
+			<p><a href="https://www.rosieapp.com/">RosieApp</a> is a Cornell based startup creating a platform that allows users to shop online for groceries at local stores, and will eventually act as a predictive shopping platform that will order things for you before running out.</p>
 			<p>I actually joined RosieApp intending to work on mobile development. However, I ended up completing a lot of design work.</p>
 
 			<hr>
 			<div class="row">
 				<div class="moreinfo large-12 columns">
 					<h2>Interaction Design</h2>
-					<p>When I first joined the team, I was asked to make mockups based on wireframes the team had produced before I joined. Below is the result.</p>
+					<p>When I first joined the team, I was asked to make mockups based on wireframes and a visual style the team had already determined before I joined. Below is the result.</p>
 				</div>
 			</div>
 
@@ -54,7 +55,7 @@
 
 			<div class="row">
 				<div class="large-12 columns moreinfo">
-					<p>Users would click on a milk jug reprsenting how much they thought they had left, and then would have to select items...  This system got the job done but quite frankly, I took me a while to understand how it worked. Interfaces should be easy and self explanitory. They should not have to be learned, so I started to work on a new system proposal. </p>
+					<p>Users would click on a product, and then click on a milk jug to indicate how much of the product they thought they had left. This system got the job done but quite frankly, I took me a while to understand how it worked. Interfaces should be self-explanatory, and should not have to be learned, so I started to work on a new system proposal. </p>
 				</div>
 			</div>
 
@@ -66,7 +67,7 @@
 
 			<div class="row">
 				<div class="large-12 columns moreinfo">
-					<p>I thought an in-line system would make it more clear that the milk jugs representing the amount  Milk jugs icons on the left would show how much of the item the app thought the user had left. Users could hold down those idividual milk jugs to pull up a small popup menu to change the values per item, if the user wanted to change the amount of a product. However, the system's popup menus could be confusing... </p>
+					<p>I thought an in-line system would make it clearer that a user needed to input quantities left, through the milk jugs, for each product. Milk jugs icons on the left would show how much of the item the app thought the user had left. Users could hold down those individual milk jugs to pull up a small popup menu to change the values per item. However, the milk jug representations were still quick confusing. I showed this mockup to other people, and many were confused about the purpose of the milk jug.</p>
 				</div>
 			</div>
 
@@ -78,7 +79,7 @@
 
 			<div class="row">
 				<div class="large-12 columns moreinfo ">
-					<p>I developed this new system to be both visually fuctional, and simple to use: The colored background bars of each list item would represent how much of the item the app thought the user had left. Colors and fullness of the bars made it much more clear which items were running out. By pressing and holding on a list item, users could slide the colored bars to indicate how much they thought they had left, making it much easier way to input information. 
+					<p>This next system is both visually functional, and simple to use; The colored background of each list item would represent how much of the item the app thought the user had left. Colors and fullness of the bars made it much more clear which items they were running out of. By pressing and holding on the colored bar of a list, users could slide the bars to indicate how much they thought they had left, making it much easier to input information.</p>
 				</div>
 			</div>
 			
@@ -88,7 +89,6 @@
 				<div class="moreinfo large-12 columns addedtopmargin">
 					<h2>Visual Design</h2>
 					<p>Below is a mockup of the app, reflected the new official branding.</p>
-					<p>Red signifies about to run out. Yellow signifies running low. Green signifies there is plenty of the product left. I choose the colors based on preset conventions of battery indicators.</p>
 				</div>
 			</div>
 
@@ -98,33 +98,33 @@
 				</div>  
 			</div>
 
+			<div class="row">
+				<div class="large-12 columns moreinfo">
+					<p>Red signifies that a user is about to run out of the product. Yellow signifies that a user is running low of the product. Green signifies there is plenty of the product left. I choose the colors based on preset conventions of battery indicators. Smartphone users are generally familiar with this convention, and this application was a smartphone application, so the meaning would hopefully be apparent to users.</p>
+				</div>
+			</div>
+
+
 			<p></p>
 
 			<div class="row">
-				<div class="moreinfo large-12 columns">
-					<h2>Branding</h2>
-					<h3>Interations</h3>
-				</div>
 				<div class="moreinfo large-7 columns">
-					<p>It was important to the team that RosieApp felt more like your personal shopper, and less like another grocery shopping app. As a result it was important to personaify Rosie in the company branding.</p>
-					<p>Some iterations of the logo can be seen on the right.</p>
+					<h2>Branding</h2>
+					<p>It was important to the team that RosieApp felt more like your personal shopper, and less like another grocery shopping app. As a result it was important to personify Rosie in the company branding.</p>
 				</div>
-				<div class="large-5 columns">
+				<div class="large-5 columns small-centered">
 					<img src="../img/rosieapp/rosielogoiteration.png">
+					<div class="centeredlabel"><p><i>Some logo iterations</i></div>
 				</div>
 			</div>
 
 			<p></p>
 
 			<div class="row">
-				<div class="moreinfo large-12 columns">
-					<h3>The Official RosieApp Branding</h3>	
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="moreinfo large-8 columns large-centered">
+				<div class="moreinfo large-8 columns large-centered small-centered">
 					<img src="../img/rosieapp/rosie-logo-samples.png">
+					<div class="centeredlabel"><p><i>The Official RosieApp Branding</i></p></div>
+					<div class="centeredlabel"><p><i>(Top: Rosie Icon, Middle: Full Rosie Logo, Bottom: Rosie Web Banner)</i></div>
 				</div>
 			</div>
 			
@@ -134,6 +134,23 @@
 				<p><a href="index.html">return to portfolio</a></p>
 			</div>
 		</div>
+
+	<script>
+		$(function(){ // document ready
+		  var stickyTop = $('#links').offset().top; // returns number 
+		  $(window).scroll(function(){ // scroll event  
+		    var windowTop = $(window).scrollTop(); // returns number
+		    if (stickyTop < windowTop) {
+		      $('#links').css({ position: 'fixed', top: 0 });
+		      $('.maincontent').css({ marginTop: '5em'});
+		    }
+		    else {
+		      $('#links').css('position','static');
+		      $('.maincontent').css({ marginTop: '1.5em'});
+		    }
+		  });
+		});
+	</script>
 
 	</body>
 </html>
