Quick copy update

--- a/pages/about.html
+++ b/pages/about.html
@@ -33,7 +33,7 @@
 		<div class="row">
 			<div class="small-12 large-12 columns moreinfo">
 				<h2>Hi, I'm Nicole Calace.</h2>
-				<p>I’m a sophomore at Cornell University, studying Information Science, with a focus on human centered systems. Primarily I consider myself an interaction designer, but I have experience working as a visual designer and rapid prototyper as well. I want simplify the boundary between people and their devices, and put the user back in user-centered design. </p>
+				<p>I’m a sophomore at Cornell University, studying Information Science, with a focus on human centered systems. Primarily I consider myself an interaction designer, but I have experience working as a visual designer and rapid prototyper as well. I want simplify the boundary between people and their devices. </p>
 				
 			</div>
 		</div>
