Updated copy and images

--- a/pages/about.html
+++ b/pages/about.html
@@ -6,7 +6,6 @@
 		<link rel="stylesheet" href="../css/normalize.css">
 		<link rel="stylesheet" href="../css/foundation.css">
 		<link rel="stylesheet" href="../css/style.css">
-		<link rel="stylesheet" href="../css/iconfont.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,600' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Montserrat:400' rel='stylesheet' type='text/css'>
@@ -32,8 +31,19 @@
 
 		<div class="row">
 			<div class="small-12 large-12 columns moreinfo">
-				<h2>Hi, I'm Nicole Calace.</h2>
-				<p>I’m a sophomore at Cornell University, studying Information Science, with a focus on human centered systems. Primarily I consider myself an interaction designer, but I have experience working as a visual designer and rapid prototyper as well. I want simplify the boundary between people and their devices. </p>
+				<div class="large-4 small-6 columns moreinfo large-centered small-centered">
+					<div class="large-block-grid-1">
+						<img id="circlepic" src="../img/circle.png">
+					</div>
+				</div>
+
+				<div id="centeredabout">
+					<h2 id="hiabout"> Hi, I'm Nicole Calace.</h2>
+					<h2 id="missionstatement">I want simplify the boundary between people &#38; their devices. </h2>
+				</div>
+
+				<p>I’m a sophomore at Cornell University, studying Information Science, with a focus on human centered systems. Primarily I consider myself an interaction designer, but I have experience working as a visual designer and rapid prototyper as well. </p>
+				<p>Currently I am a researcher at Cornell's <a href="http://idl.cornell.edu/">Interaction Design Lab</a>, a manager of <a href="http://popright.in">POPSHOP</a> co-working space, and the president of the <a href="http://cornelluxdesign.com">Cornell User Experience Design club</a>.</p>
 				
 			</div>
 		</div>
@@ -41,15 +51,14 @@
 		<p></p>
 
 		<div class="row">
-			<div class="large-12 small-7 columns large-centered small-centered moreinfo">
-				<p>
-					<div class="button"><a href="nicolecalace_resume.pdf">resume (PDF)</a> </div>
-					<div class="button"><a href="mailto:nec45@cornell.edu">email</a> </div>
-					<div class="button"><a href="http://www.linkedin.com/profile/view?id=240373679">LinkedIn</a></div>
-					<div class="button"><a href="https://github.com/thiswouldbenicole">GitHub</a></div>
-					<div class="button"><a href="https://behance.net/nicolecalace">Behance</a></div>
-					<div class="button"><a href="http://twitter.com/therealactual">Twitter</a></div>
-				</p>
+			<div class="large-8 medium-12 small-12 columns large-centered small-centered" id="sociallinks">
+				<ul class="moreinfo grid large-block-grid-6 small-block-grid-6 hoverfade" >
+					<li><a href="nicolecalace_resume.pdf"><img src="../img/socialicons/resumeicon.png"></a> </li>
+					<li><a href="mailto:nec45@cornell.edu"><img src="../img/socialicons/emailicon.png"></li>
+					<li><a href="http://www.linkedin.com/profile/view?id=240373679"><img src="../img/socialicons/linkedinicon.png"></li>
+					<li><a href="https://behance.net/nicolecalace"><img src="../img/socialicons/behanceicon.png"></a></li>
+					<li><a href="https://github.com/thiswouldbenicole"><img src="../img/socialicons/githubicon.png"></a></li>
+					<li><a href="http://twitter.com/therealactual"><img src="../img/socialicons/twittericon.png"></a></li>
 			</div>
 		</div>
 
