--- a/pages/index.html
+++ b/pages/index.html
@@ -34,7 +34,7 @@
 				<li> <a href="lab126.html"> <img src="../img/covers/lab126-cover.png"> <span> <h3>UX Design Intern</h3> <p> Amazon Lab126</p> </span> </a> </li> 
 				<li> <a href="rosieapp.html"> <img src="../img/covers/RosieApp-cover.png"> <span> <h3>UX Designer</h3> <p> RosieApp </p> </span> </a> </li>
 				<li> <a href="wingit.html"> <img src="../img/covers/wingit-cover.png"> <span> <h3>UX Designer</h3> <p> WingIt</p> </span> </a> </li>
-				<li> <a href="robotics.html"> <img src="../img/covers/first-robotics-cover.png"> <span> <h3>Captain</h3> <p>The Fe Maidens</p> </span> </a> </li>   
+				<li> <a href="robotics.html"> <img src="../img/covers/first-robotics-cover.png"> <span> <h3>Robotics Captain</h3> <p>The Fe Maidens</p> </span> </a> </li>   
 			</ul>
 		</div>
 
