--- a/pages/pact.html
+++ b/pages/pact.html
@@ -19,8 +19,8 @@
 			<h2>Student. Interaction designer.</h2>
 		</div>
 
-		<a href="kickit.html"> <div class="arrow leftarrow"> < </div> </a>
-		<a href="lab126.html"> <div class="arrow rightarrow"> > </div> </a>
+		<a href="kickit.html"> <div class="arrow leftarrow"> &#60; </div> </a>
+		<a href="lab126.html"> <div class="arrow rightarrow"> &#62; </div> </a>
 
 		<div class="header" id="links">
 			<ul class="navbar">
