--- a/pages/robotics.html
+++ b/pages/robotics.html
@@ -19,7 +19,7 @@
 			<h2>Student. Interaction designer.</h2>
 		</div>
 
-		<a href="wingit.html"> <div class="arrow leftarrow"> < </div> </a>
+		<a href="wingit.html"> <div class="arrow leftarrow"> &#60; </div> </a>
 
 		<div class="header" id="links">
 			<ul class="navbar">
@@ -31,10 +31,10 @@
 		</div>
 
 		<div class="maincontent projectinfo">
-			<h1>The Fe Maidens, All-Girls FIRST Robotics Team</h1>
-			<h2>Captain, Co-Captain, Head of Programming and Electronics</h2>
+			<h1>The Fe Maidens</h1>
+			<h2>Captain, Co-Captain, Head of Programming &#38; Electronics</h2>
 			<h3>September 2008 - June 2012</h3>
-			<p>I spent all four years of high school as a dedicated member of Bronx Science’s all-girls FIRST robotics team, 2265, The Fe Maidens. With my team, I built 4 award winning robots. I lead the team of 50 girls as Co-Captain and Head of Programming and Electronics as a junior, and as Captain as a senior. </p>
+			<p>I spent all four years of high school as a dedicated member of Bronx Science’s all-girls <a href="http://www.usfirst.org/roboticsprograms/frc">FIRST</a> robotics team, 2265, The Fe Maidens. With my team, I built 4 award winning robots. I lead the team of 50 girls as Co-Captain and Head of Programming and Electronics as a junior, and as Captain as a senior. </p>
 
 			<hr>
 
@@ -42,9 +42,14 @@
 				<div class="moreinfo large-12 columns">
 					<h2>2009 - <a href="http://www.youtube.com/watch?v=ZnGfbGzEFrM"> "Lunacy" </a></h2>
 					<p>As a freshman I worked mostly the physical construction of our robot, "Robert."</p>
-					<ul class="large-block-grid-1">
-						<li> <img src"../img/robotics/.png"> </li>
-					</ul>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="large-11 columns large-centered small-centered">
+					<div class="large-block-grid-1 small-block-grid-1" id="topspace">
+						<li><img src="../img/robotics/2009-robot.jpg"><div class="centeredlabel"><p><i>Our 2009 robot, collecting game pieces.</i></p></div></li>
+					</div>
 				</div>
 			</div>
 
@@ -54,11 +59,13 @@
 					<p>The programming and electronics team graduated the previous year, so as a sophomore I taught myself the basics of electronics and Java, and wired and programmed our robot on my own.</p>
 					<p>That year we won the <b>NYC Regional Championship</b> based on our robot's performance, and the <b>NYC Engineering Inspiration</b> award for our outreach work in K-12 engineering education.</p>
 					<p>Below is a picture of our 2010 robot, “Kelly the Beckam Gellerman.”</p>
-
+				</div>
+			</div>
+			<div class="row">
+				<div class="large-12 columns">
 					<div class="large-block-grid-1 small-block-grid-1" id="topspace">
-						<li><img src="../img/robotics/2010-robot.jpg"><div class="centeredlabel"><p><i>Our 2010 robot (red bumpbers) defending the goal from an opposing alliance's robot</i></p></div></li>
+						<li><img src="../img/robotics/2010-robot.jpg"><div class="centeredlabel"><p><i>Our 2010 robot (red bumpers) defending the goal from an opposing alliance's robot</i></p></div></li>
 					</div>
-
 				</div>
 			</div>
 
@@ -67,10 +74,13 @@
 					<h2>2011 - <a href="http://www.youtube.com/watch?v=oxujTCgQPgg"> "Logomotion" </a></h2>
 					<p>As a junior I held the positions of team co-captain and Head of Electronics and Programming. I worked on the programming, electronics, and pneumatics of the robot, in addition to making sure the team was working together as a whole. In 2011 we were <b>NYC Regional Quarter-Finalists</b>.</p>
 					<p>Below is a picture of our 2011 robot.</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="large-12 columns">
 					<ul class="large-block-grid-1 small-block-grid-1" id="topspace">
 						<li><img src="../img/robotics/2011-robot.jpg"></li>
 					</ul>
-
 				</div>
 			</div>
 
@@ -79,7 +89,10 @@
 					<h2>2012 - <a href="http://www.youtube.com/watch?v=nOXsdhZZSdM"> "Rebound Rumble" </a></h2>
 					<p>As a senior, I held the position of team captain. I worked on the programming, electronics, and pneumatics of the robot, in addition to making sure the team was working together as a whole. In 2012 our team placed as <b>NYC Regional Semi-Finalists</b>.</p>
 					<p>Below are some pictures of our 2012 robot, “Hooptimus Prime.”</p>
-
+				</div>
+			</div>
+			<div class="row">
+				<div class="large-12 columns">
 					<ul class="large-block-grid-2 small-block-grid-1" id="topspace">
 						<li><img src="../img/robotics/2012-robot.jpg"><div class="centeredlabel"><p><i>Our 2012 robot, taking practice shots in the hallway.</i></p></div></li>
 						<li><img src="../img/robotics/2012-robot2.jpg"><div class="centeredlabel"><p><i>Our 2012 robot, on the left, balancing on a game obstacle for extra points with one of our alliance partners.</i></p></div></li>
