--- a/pages/kickit.html
+++ b/pages/kickit.html
@@ -19,7 +19,7 @@
 			<h2>Student. Interaction designer.</h2>
 		</div>
 
-		<a href="pact.html"> <div class="arrow rightarrow"> > </div> </a>
+		<a href="pact.html"> <div class="arrow rightarrow"> &#62; </div> </a>
 
 		<div class="header" id="links">
 			<ul class="navbar">
