--- a/pages/lab126.html
+++ b/pages/lab126.html
@@ -18,8 +18,8 @@
 			<a href="index.html"> <h1>Nicole Calace</h1> </a>
 			<h2>Student. Interaction designer.</h2>
 		</div>
-		<a href="pact.html"> <div class="arrow leftarrow"> < </div> </a>
-		<a href="rosieapp.html"> <div class="arrow rightarrow"> > </div> </a>
+		<a href="pact.html"> <div class="arrow leftarrow"> &#60; </div> </a>
+		<a href="rosieapp.html"> <div class="arrow rightarrow"> &#62; </div> </a>
 
 		<div class="header" id="links">
 			<ul class="navbar">
