--- a/pages/rosieapp.html
+++ b/pages/rosieapp.html
@@ -19,8 +19,8 @@
 			<h2>Student. Interaction designer.</h2>
 		</div>
 
-		<a href="lab126.html"> <div class="arrow leftarrow"> < </div> </a>
-		<a href="wingit.html"> <div class="arrow rightarrow"> > </div> </a>
+		<a href="lab126.html"> <div class="arrow leftarrow"> &#60; </div> </a>
+		<a href="wingit.html"> <div class="arrow rightarrow"> &#62; </div> </a>
 
 		<div class="header" id="links">
 			<ul class="navbar">
@@ -107,7 +107,7 @@
 
 			<p></p>
 
-			<div class="row">
+			<div class="row" id="topgap">
 				<div class="moreinfo large-7 columns">
 					<h2>Branding</h2>
 					<p>It was important to the team that RosieApp felt more like your personal shopper, and less like another grocery shopping app. As a result it was important to personify Rosie in the company branding.</p>
