--- a/pages/pact.html
+++ b/pages/pact.html
@@ -35,7 +35,7 @@
 			<h1>Achieve</h1>
 			<h2>UX Design Lead</h2>
 			<h3>August 2013 - January</h3>
-			<p>Achieve, (formerly know as 'Pact') is a goal-tracking platform that was developed as a research project under Professor Cosley. Our project was accepted to CHI 2014 as a work in progress.</p>
+			<p>Achieve, (formerly know as 'Pact') is a goal-tracking platform that was developed as a research project under Professor Cosley. Our project was accepted to <b>CHI 2014</b> as a work in progress.</p>
 
 			<hr>
 			<div class="row">
